--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^7.0.1",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
