--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.3",
     "express-validator": "^7.0.1",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
